[project]
name = "ongoing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.0",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
]
